# rvy

./: Cargo.toml  README.md
src/: main.rs
src/generator/: data.rs  dispatch.rs  error.rs  handler.rs  mod.rs
templates/: data.rs.tpl  error.rs.tpl  handler.rs.tpl  handler_api_doc.rs.tpl  repository.rs.tpl  service.rs.tpl  usecase.rs.tpl
templates/adapter/: mongodb.rs.tpl  mysql.rs.tpl  postgres.rs.tpl  sqlite.rs.tpl
templates/factory/: repository_factory.rs.tpl
templates/project/: Cargo.toml.tpl
